# hasmet

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  build.rar
src/: main.cpp
src/accelerator/: bvh.cpp  bvh.h  hittable.cpp  hittable.h  instance.h
src/camera/: camera.h  pinhole.cpp  pinhole.h  thinlens.cpp  thinlens.h
src/core/: aabb.h  color.h  constants.h  frame.h  hit_record.h  interval.h  logging.h  medium.h  perlin.cpp  perlin.h  ray.h  sampler.h  sampling.h  spectrum.h  timer.h  types.h  vec.h
src/film/: film.cpp  film.h  tonemap.cpp  tonemap.h
src/geometry/: mesh.cpp  mesh.h  plane.cpp  plane.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/image/: image.cpp  image.h  image_manager.cpp  image_manager.h
src/integrator/: integrator.h  normals.cpp  normals.h  pathtracer.cpp  pathtracer.h  whitted.cpp  whitted.h
src/io/: image_io.cpp  image_io.h
src/light/: ambient_light.h  area_light.cpp  area_light.h  directional_light.cpp  directional_light.h  environment_light.cpp  environment_light.h  light.h  point_light.cpp  point_light.h  spherical_directional_light.h  spot_light.cpp  spot_light.h
src/material/: bsdf.cpp  bsdf.h  bxdf.cpp  bxdf.h  bxdf_library.h  material.cpp  material.h  material_manager.cpp  material_manager.h
src/parser/: parser.cpp  parser.h  parser_adapter.cpp  parser_adapter.h
src/scene/: scene.cpp  scene.h
src/texture/: texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
